--- a/src/components/home-page/home-page.component.html
+++ b/src/components/home-page/home-page.component.html
@@ -1,1 +1,7 @@
-<p>home-page works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <img src="assets/images/opening-img.jpg" alt="Open floor modern home">
+        </div>
+    </div>
+</div>
